src/main/resources/grammar
<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
<number> ::= <digit> | <digit> <number>
<operation> ::= "+" | "-" | "*"
<constant_expression> ::= "-" <number> | <number>
<binary_expression> ::= "(" <expression> <operation> <expression> ")"
<expression> ::= "element" | <constant_expression> | <binary_expression>
